--- a/esercizi/docker/10/dockerfile
+++ b/esercizi/docker/10/dockerfile
@@ -19,4 +19,5 @@ COPY --from=builder /app/node_modules ./node_modules
 
 EXPOSE 3000
 
-CMD ["node", "/app/server.js"]
+ENTRYPOINT ["node", "/app/server.js"]
+
